Fixed z-index of modal dialog

--- a/easydata.js/packs/ui/assets/css/easy-dialog.css
+++ b/easydata.js/packs/ui/assets/css/easy-dialog.css
@@ -24,7 +24,7 @@
     justify-content: center;
     overflow: hidden;
     position: fixed;
-    z-index: 9999999999;
+    z-index: 9999;
 }
 
 .kdlg-modal.is-active {
